:art: Add linter

--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
 		"stylelint-config-prettier": "^8.0.1",
 		"stylelint-order": "^4.0.0"
 	},
+	"devDependencies": {
+		"prettier": "^1.19.1",
+		"stylelint": "^13.0.0",
+		"stylelint-config-prettier": "^8.0.1",
+		"stylelint-order": "^4.0.0"
+	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
