--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"git": "^0.1.5",
-		"node-sass": "^4.13.1",
+		"node-sass": "^4.14.1",
 		"push": "^0.1.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
+		"sass-extract": "^2.1.0",
+		"sass-extract-js": "^0.4.0",
+		"sass-extract-loader": "^1.1.0",
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
@@ -41,5 +44,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"resolutions": {
+		"styled-components": "^5"
 	}
 }
