--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,13 @@
 {
 	"short_name": "Onde",
-	"name": "Onde",
-	"icons": [
-		{
-			"src": "favicon.ico",
-			"sizes": "64x64 32x32 24x24 16x16",
-			"type": "image/x-icon"
-		}
-	],
-	"start_url": ".",
+	"name": "Onde - Plateforme participative",
+	"icons": [{
+		"src": "favicon.ico",
+		"sizes": "64x64 32x32 24x24 16x16",
+		"type": "image/x-icon"
+	}],
+	"start_url": "https://onde.netlify.app/initiatives",
 	"display": "standalone",
-	"theme_color": "#000000",
-	"background_color": "#ffffff"
+	"theme_color": "#274690",
+	"background_color": "#F9FAFF"
 }
